--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,9 @@ a {
 	background: var(--light-color);
 	color: var(--dark-color-a);
 	border: 0;
-	font-size: 17px;
+	font-size: 16px;
+	width: 90px;
+	height: 40px;
 }
 
 /* Chat Page */
@@ -186,5 +188,9 @@ a {
 
 	.chat-sidebar {
 		display: none;
+	}
+	.btn {
+		font-size: 14px;
+	
 	}
 }
