--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,13 +31,14 @@ a {
 
 .btn {
 	cursor: pointer;
-	padding: 5px 15px;
+	padding: 10px 5px;
 	background: var(--light-color);
 	color: var(--dark-color-a);
 	border: 0;
 	font-size: 16px;
-	width: 90px;
+	width: 120px;
 	height: 40px;
+	text-align: center;
 }
 
 /* Chat Page */
